// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Curtains renders correctly 1`] = `
<Fragment>
  <div
    className="curtain left open"
    key="left"
    onClick={[Function]}
  />
  <div
    className="curtain right open"
    key="right"
    onClick={[Function]}
  />
</Fragment>
`;

exports[`Curtains renders correctly 2`] = `
<Fragment>
  <div
    className="curtain left"
    key="left"
    onClick={[Function]}
  />
  <div
    className="curtain right"
    key="right"
    onClick={[Function]}
  />
</Fragment>
`;
